# passutil

./: .gitignore  .gitmodules  Cargo.toml
gui/: Cargo.toml
gui/src/: main.rs  messages.rs  state.rs
gui/src/backend/: dir.rs  mod.rs
gui/src/messages/: mod.rs
gui/src/ui/: filepicker.rs  mod.rs  selector.rs
passutil-core/: Cargo.toml
passutil-core/src/: main.rs
passutil-core/src/components/: background.rs  badges.rs  banners.rs  frame.rs  text.rs
passutil-ui/: Cargo.toml
passutil-ui/src/: error.rs  main.rs  result.rs  state.rs
passutil-ui/src/backend/: dir.rs
passutil-ui/src/messages/: mod.rs
passutil-ui/src/ui/: filepicker.rs  mod.rs
piet/piet-common/: Cargo.toml
piet/piet/src/: text.rs
src/: lib.rs
