[workspace]
members = [
    "passutil-ui",
    "passutil-core",
    "piet/piet/",
    "piet/piet-common",
    # "piet/piet-cairo",
    #  "piet/piet-coregraphics",
    "piet/piet-direct2d/",
    "piet/piet-web/",
    "piet/piet-web/examples/basic/",
    "piet/piet-svg/",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TOwInOK", "Rottenfront"]
repository = "https://github.com/TOwInOK/SSS-rs"
license = "Apache-2.0"

[workspace.metadata.docs]
rs-doc-path = "docs"


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
